<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.premnath.whosturn.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Activities"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <Button
            android:id="@+id/dustbin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dustbin" />

        <Button
            android:id="@+id/utensils"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utensils" />

        <Button
            android:id="@+id/bathroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bathroom" />

        <Button
            android:id="@+id/room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livingroom" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="250dp">

            <Button
                android:id="@+id/btn_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/members" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
